welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:1: error: value foreach is not a member of Int
for(i<-4){
       ^MethodsDogHouse:24: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:30: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:40: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:50: error: not found: value dogHouse
		dogHouse();		
                ^