welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
for(i<-4){
	leveBrosse();
	setCouleurBrosse(Color.red);
	for(j<-4){
		avance(); avance(); gauche();
	
	}
	
	
	
	
	
	
	
	
	
	
	}